[package]
name = "RustActor"
version = "0.1.0"
authors = ["barloesgit <junhuitee@hotmail..com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-broker = "0.3.1"
actix-files = "0.4"
actix-rt = "1"
actix-web = "3"
actix-web-actors = "3"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
rand = "0.7"
